# NovaCite

./: .gitignore  README.md  app.py  config.py  graph.py  pyproject.toml  requirements.txt
circulars/: circulars_fetcher.py  scheduler.py
data_ingestion/: loader.py  scraper.py
llm_module/: intent_recognizer.py
qa_system/: retriever.py
